Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Dup.out
Dup.java:11:1: compiler.err.duplicate.annotation.missing.container: Dup
1 error
